kubernetes/apps/kube-system/cilium-policies/app/tier1-metrics-scraping.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: tier1-metrics-scraping-egress
spec:
  description: Allow metrics scrapers to reach all cluster endpoints for scraping
  endpointSelector:
    matchLabels:
      network.cilium.io/metrics-scraper: "true"
  egress:
    - toEntities:
        - host
        - remote-node
        - kube-apiserver
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
            - port: "10255"
              protocol: TCP
            - port: "2381"
              protocol: TCP
            - port: "10257"
              protocol: TCP
            - port: "10259"
              protocol: TCP
            - port: "9100"
              protocol: TCP
            - port: "9962"
              protocol: TCP
            - port: "9963"
              protocol: TCP
            - port: "9964"
              protocol: TCP
            - port: "9965"
              protocol: TCP
            - port: "9966"
              protocol: TCP
    - toEntities:
        - cluster
